# BoxCreate

./: CMakeLists.txt  README.md
include/: globals.hpp
include/class/: image.hpp  shader.hpp  shaderProgram.hpp
include/def/: box.hpp
src/: globals.cpp  main.cpp
src/class/: image.cpp  shader.cpp  shaderProgram.cpp
src/def/: box.cpp
src/gl/frag/: shader.frag  shader2.frag
src/gl/vert/: shader.vert
src/include/class/: shader.hpp  shaderProgram.hpp
